# codemoo

./: .gitignore  .pre-commit-bumpver.sh  AGENTS.md  BOTS.md  CLAUDE.md  LICENSE  PLANS.md  README.md  SCRIPT.md  pyproject.toml
.github/workflows/: publish.yml
configs/: codemoo.toml
demo/: AGENTS.md  README.md  greeter.py  names.txt  test_greeter.py
openspec/: .openspecui.json  config.yaml
openspec/specs/agent-bot/: spec.md
openspec/specs/approval-modal/: spec.md
openspec/specs/backend-status-bar/: spec.md
openspec/specs/bot-selection-screen/: spec.md
openspec/specs/bot-spec-resolver/: spec.md
openspec/specs/bot-tool-registry/: spec.md
openspec/specs/bot-variant-config/: spec.md
openspec/specs/change-bot/: spec.md
openspec/specs/chat-bot/: spec.md
openspec/specs/chat-bubble-display/: spec.md
openspec/specs/chat-participant/: spec.md
openspec/specs/chat-ui/: spec.md
openspec/specs/commentary-events/: spec.md
openspec/specs/commentator-bot/: spec.md
openspec/specs/config-injection/: spec.md
openspec/specs/core-message/: spec.md
openspec/specs/demo-artifacts/: spec.md
openspec/specs/demo-bot-descriptions/: spec.md
openspec/specs/demo-mode/: spec.md
openspec/specs/demo-preset-prompts/: spec.md
openspec/specs/demo-scripts/: spec.md
openspec/specs/demo-slide-screen/: spec.md
openspec/specs/echo-bot/: spec.md
openspec/specs/env-language-config/: spec.md
openspec/specs/env-model-config/: spec.md
openspec/specs/error-bot/: spec.md
openspec/specs/file-bot/: spec.md
openspec/specs/frontend-tui/: spec.md
openspec/specs/general-tool-bot/: spec.md
openspec/specs/google-backend/: spec.md
openspec/specs/guard-bot/: spec.md
openspec/specs/list-bots-command/: spec.md
openspec/specs/list-scripts-command/: spec.md
openspec/specs/llm-backend/: spec.md
openspec/specs/llm-bot/: spec.md
openspec/specs/llm-completion/: spec.md
openspec/specs/llm-context-builder/: spec.md
openspec/specs/m365-graph-auth/: spec.md
openspec/specs/m365-scan-bot/: spec.md
openspec/specs/m365-send-bot/: spec.md
openspec/specs/m365-tool-factory/: spec.md
openspec/specs/mode-background-tint/: spec.md
openspec/specs/mode-status-bar/: spec.md
openspec/specs/multi-backend/: spec.md
openspec/specs/ollama-backend/: spec.md
openspec/specs/openai-backend/: spec.md
openspec/specs/openai-backend-base/: spec.md
openspec/specs/organized-tool-modules/: spec.md
openspec/specs/project-context/: spec.md
openspec/specs/read-bot/: spec.md
openspec/specs/read-file-tool/: spec.md
openspec/specs/run-shell-tool/: spec.md
openspec/specs/script-mode/: spec.md
openspec/specs/shell-bot/: spec.md
openspec/specs/single-turn-tool-bot/: spec.md
openspec/specs/structured-tool-def/: spec.md
openspec/specs/system-bot/: spec.md
openspec/specs/thinking-status-bar/: spec.md
openspec/specs/toml-bot-registry/: spec.md
openspec/specs/tool-approval-flag/: spec.md
openspec/specs/tool-bot/: spec.md
openspec/specs/tool-definitions/: spec.md
openspec/specs/tool-init-hooks/: spec.md
src/codaroo/: __init__.py
src/codaroo/chat/: __init__.py  app.py  bubble.py  chat.tcss  selection.py
src/codaroo/core/: __init__.py  echo_bot.py  participant.py
src/codaroo/llm/: __init__.py  backend.py  bots.py
src/codemoo/: __init__.py  cli.py  config.py
src/codemoo/chat/: app.py  approval.py  backend_status.py  bubble.py  chat.tcss  demo_header.py  selection.py  slides.py  slides_data.py  status.py
src/codemoo/config/: __init__.py  codemoo.toml  schema.py
src/codemoo/core/: __init__.py  backend.py  context.py  echo_bot.py  message.py  participant.py
src/codemoo/frontends/: __init__.py  cli.py  tui.py
src/codemoo/llm/: anthropic.py  backend.py  bots.py  exceptions.py  factory.py  google.py  message.py  mistral.py  ollama.py  openai.py  openai_like.py  openrouter.py
src/codemoo/m365/: __init__.py  auth.py
src/gaia/: __init__.py
src/gaia/chat/: app.py  bubble.py  chat.tcss  echo_bot.py  message.py  participant.py
src/gaia/core/: __init__.py  echo_bot.py  participant.py
tests/: __init__.py  test_config.py
tests/chat/: test_bubble.py  test_chat_app_demo.py  test_collect_replies.py  test_demo_header.py  test_echo_bot.py  test_message.py  test_participant.py  test_selection.py  test_slides.py
tests/config/: test_schema.py
tests/core/: __init__.py  test_backend.py  test_echo_bot.py  test_message.py  test_participant.py
tests/core/bots/: __init__.py  test_agent_bot.py  test_change_bot.py  test_chat_bot.py  test_commentator_bot.py  test_echo_bot.py  test_error_bot.py  test_file_bot.py  test_guard_bot.py  test_llm_bot.py  test_make_bots.py  (+5 more)
tests/frontends/: __init__.py  test_tui.py
tests/llm/: __init__.py  test_backend.py  test_bots.py  test_complete_step.py  test_new_backends.py  test_openai_like.py  test_unified_complete.py
(+332 files in other folders)
