[project]
name = "gaia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Geir Arne Hjelle", email = "geir.arne.hjelle@xlent.no" }
]
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.1",
]

[project.scripts]
gaia = "gaia:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]
