[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "gaia"
version = "0.1.0"
description = "Geir Arne's AI-driven Agentic Loop"
readme = "README.md"
authors = [
    { name = "Geir Arne Hjelle", email = "geirarne@gmail.com" },
    { name = "Geir Arne Hjelle", email = "geir.arne.hjelle@xlent.no" },
]
requires-python = ">=3.12"
dependencies = ["textual>=8.2.1"]

[project.scripts]
gaia = "gaia:main"

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.8",
    "ty>=0.0.26",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing (handled by formatter)
    "D203",   # Force blank line before class docstring (incompatible with D211)
    "D213",   # Start docstring on second line (incompatible with D212)
]

[tool.ruff.lint.per-file-ignores]
# PLR2004: Magic value used in comparison (OK for tests)
# S101: Use of `assert` (OK for tests)
# SLF001: Private member accessed (OK for tests)
# UP018: Replace with string/integer/... literal (OK for typed tests)
"tests/test_*.py" = ["PLR2004", "S101", "SLF001", "UP018"]
"tests/*/test_*.py" = ["S101"]
