[build-system]
requires = ["uv_build>=0.10.0,<0.12.0"]
build-backend = "uv_build"

[project]
name = "codemoo"
version = "2026.4.2"
description = "Demonstrations of how AI coding and business agents work"
readme = "README.md"
authors = [
    { name = "Geir Arne Hjelle", email = "geirarne@gmail.com" },
    { name = "Geir Arne Hjelle", email = "geir.arne.hjelle@xlent.no" },
]
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.97.0",
    "configaroo>=0.6.1",
    "cyclopts>=4.10.2",
    "httpx>=0.28.1",
    "mistralai>=2.4.0",
    "msal>=1.36.0",
    "openai>=2.32.0",
    "platformdirs>=4.9.6",
    "pydantic>=2.13.3",
    "rich>=15.0.0",
    "textual>=8.2.1",
]

[project.scripts]
codemoo = "codemoo.frontends.tui:code_app"
moo = "codemoo.frontends.tui:code_app"
enterproose = "codemoo.frontends.tui:business_app"
proose = "codemoo.frontends.tui:business_app"
demoo = "codemoo.frontends.cli:app"

[dependency-groups]
dev = [
    "build>=1.4.4",
    "bumpver>=2025.1131",
    "prek>=0.3.8",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "twine>=6.2.0",
    "ty>=0.0.26",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
exclude = ["demo/"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "COM812", # Trailing comma missing (handled by formatter)
    "D203",   # Force blank line before class docstring (incompatible with D211)
    "D213",   # Start docstring on second line (incompatible with D212)
]

[tool.ruff.lint.per-file-ignores]
# ARG001/ARG002: Unused function/method argument
# D100/D103: Test modules and functions are named descriptively; docstrings add no value
# PLC0415: Imports should be at top of file
# PLR2004: Magic value used in comparison (OK for tests)
# S101: Use of `assert` (OK for tests)
# SLF001: Private member accessed (OK for tests)
# UP018: Replace with string/integer/... literal (OK for typed tests)
"tests/test_*.py" = [
    "ARG001",
    "ARG002",
    "D100",
    "D103",
    "PLC0415",
    "PLR2004",
    "S101",
    "SLF001",
    "UP018",
]
"tests/*/test_*.py" = [
    "ARG001",
    "ARG002",
    "D100",
    "D103",
    "PLC0415",
    "PLR2004",
    "S101",
    "SLF001",
    "UP018",
]

[[tool.ty.overrides]]
# Test doubles for Textual framework objects (MockKey, MockButtonPressed) are
# duck-typed structs intentionally lighter than the real event classes; and
# monkey-patching app.exit / screen.dismiss is a deliberate test technique to
# avoid launching a full Textual event loop. Both patterns are safe in tests.
include = ["tests/**"]

[tool.ty.overrides.rules]
invalid-argument-type = "ignore"
invalid-assignment = "ignore"

[tool.bumpver]
current_version = "v2026.4.2"
version_pattern = "vYYYY.MM.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = ['current_version = "YYYY.MM.PATCH"']
"src/codemoo/__init__.py" = ['__version__ = "YYYY.MM.PATCH"']
